// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MangaAliases renders correctly Should render correctly with aliases 1`] = `
<div
  className="makeStyles-root-1"
  id="manga-aliases"
>
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    Alternative titles
  </p>
  <ul
    className="MuiList-root makeStyles-list-2 MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemText-root makeStyles-listItem-3 MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          a
        </span>
      </div>
    </li>
    <li
      className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemText-root makeStyles-listItem-3 MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          b
        </span>
      </div>
    </li>
    <li
      className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemText-root makeStyles-listItem-3 MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          c
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`MangaAliases renders correctly Should render correctly with editing allowed 1`] = `
<div
  className="makeStyles-root-1"
  id="manga-aliases"
>
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    Alternative titles
  </p>
  <ul
    className="MuiList-root makeStyles-list-2 MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemText-root makeStyles-listItem-3 MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          a
        </span>
      </div>
      <button
        aria-describedby={null}
        aria-label="Set alias as main title"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Set as main title"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root makeStyles-promoteIcon-4"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 5H11l5 7-5 7h4.5l5-7z"
            />
            <path
              d="M8.5 5H4l5 7-5 7h4.5l5-7z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </li>
    <li
      className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemText-root makeStyles-listItem-3 MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          b
        </span>
      </div>
      <button
        aria-describedby={null}
        aria-label="Set alias as main title"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Set as main title"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root makeStyles-promoteIcon-4"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 5H11l5 7-5 7h4.5l5-7z"
            />
            <path
              d="M8.5 5H4l5 7-5 7h4.5l5-7z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </li>
    <li
      className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemText-root makeStyles-listItem-3 MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          c
        </span>
      </div>
      <button
        aria-describedby={null}
        aria-label="Set alias as main title"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Set as main title"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root makeStyles-promoteIcon-4"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 5H11l5 7-5 7h4.5l5-7z"
            />
            <path
              d="M8.5 5H4l5 7-5 7h4.5l5-7z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`MangaAliases renders correctly Should render correctly without aliases 1`] = `null`;

exports[`MangaAliases renders correctly Should render correctly without aliases 2`] = `null`;
